# tracklistify

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_PHASES_3_6.md  README.md  env-setup.sh  install.sh  poetry.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py
.ai/: DEVELOPER_HANDBOOK.md  IMPLEMENTATION-PLAN.md  PYTHON.MD
.githooks/: commit-msg
.github/: commit-template.txt
.github/hooks/: commit-msg
.github/workflows/: pre-commit.yml
docs/: ARCHITECTURE_CHANGES.md  CHANGELOG.md  CHECKLIST.md  IMPLEMENTATION_AUDIT.md  refactor-plan.md  refactor-prompt.md  refactor-step1.md  refactor-step2.md
docs/archive/: AUDIT_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md
docs/refactor/: 01_overview.md  02_architecture.md  03_development_tools.md  04_refactoring_goals.md  05_refactoring_plan.md  06_troubleshooting.md  07_contributing.md  08_checklist.md  README.md
scripts/: generate_config_docs.py  generate_env_example.py
src/tracklistify/: cli.py
src/tracklistify/cache/: __init__.py  base.py  factory.py  index.py  storage.py
src/tracklistify/config/: __init__.py  base.py  factory.py  paths.py  security.py
src/tracklistify/core/: __init__.py  base.py  exceptions.py  run.py  track.py  types.py
src/tracklistify/dev_cli/: logging.py
src/tracklistify/dev_cli/commands/: base.py  run.py
src/tracklistify/downloaders/: factory.py  mixcloud.py  spotify.py  ytdlp.py
src/tracklistify/exporters/: spotify.py
src/tracklistify/providers/: base.py  factory.py  shazam.py  spotify.py
src/tracklistify/utils/: __init__.py  constants.py  decorators.py  identification.py  logger.py  project.py  rate_limiter.py  time_formatter.py  validation.py
tests/: TESTING.md  conftest.py  test_app.py  test_audio.py  test_cache.py  test_cli_arguments.py  test_code_organization.py  test_config.py  test_config_security.py  test_decorators.py  test_downloader_errors.py  test_empty_methods.py  test_environment.py  test_error_handling.py  test_exception_consistency.py  test_identification.py  test_identification_utils.py  test_imports.py  test_input_validation.py  test_logger.py  test_no_debug_code.py  test_phase4_fixes.py  test_phase6_polish.py  test_providers.py  test_providers_spotify.py  test_rate_limiter.py  test_rate_limiter_async.py  test_resource_management.py  test_security.py  test_singleton_thread_safety.py  test_spotify_encapsulation.py  test_time_consistency.py  test_track_matcher.py  test_track_metadata.py  test_type_hints.py  test_validation.py
tracklistify/: __init__.py  __main__.py  _version.py  app.py  audio.py  cache.py  cli.py  config.py  decorators.py  dev-cli.py  dev.py  downloader.py  error_logging.py  exceptions.py  identification.py  output.py  rate_limiter.py  track.py  types.py  validation.py
tracklistify/cache/: __init__.py  base.py  factory.py  index.py  invalidation.py  storage.py
tracklistify/config/: __init__.py  base.py  docs.py  factory.py  security.py  validation.py
tracklistify/core/: __init__.py  app.py  base.py  cli.py  exceptions.py  run.py  track.py  types.py
tracklistify/downloaders/: __init__.py  base.py  factory.py  mixcloud.py  spotify.py  youtube.py  ytdlp.py
tracklistify/exporters/: __init__.py  spotify.py  tracklist.py
tracklistify/providers/: acrcloud.py  base.py  factory.py  shazam.py  spotify.py
tracklistify/utils/: __init__.py  decorators.py  error_logging.py  identification.py  logger.py  rate_limiter.py  strings.py  validation.py
