[tool.poetry]
name = "tracklistify"
version = "0.6.0"
description = "Automatic tracklist generator for DJ mixes and audio streams"

license = "MIT"

authors = [
    "betmoar <betmoar@mailsecure.me>"
]

homepage = "https://github.com/betmoar/tracklistify"
repository = "https://github.com/betmoar/tracklistify.git"
documentation = "https://github.com/betmoar/tracklistify#readme"

# README file(s) are used as the package description
readme = ["README.md"]

# Keywords (translated to tags on the package index)
keywords = ["tracklistify", "youtube", "mixcloud", "shazam", "tracklist", "audio", "fingerprinting"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">3.11,<3.13"
aiohttp = "^3.11.8"
configparser = "^7.1.0"
mutagen = "^1.47.0"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
yt-dlp = "^2024.11.18"
shazamio = { git = "https://github.com/shazamio/shazamio.git" }
shazamio-core = { git = "https://github.com/shazamio/shazamio-core.git" }
pyacrcloud = { git = "https://github.com/acrcloud/acrcloud_sdk_python.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"
ruff = "^0.8.0"
commitizen = "^4.0.0"
yt-dlp = "^2024.11.18"

[tool.poetry.scripts]
tracklistify = "tracklistify.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
